// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FromText default 1`] = `
<Text
  style={
    Object {
      "color": "rgba(95, 80, 181, 0.8)",
      "fontSize": 24,
    }
  }
>
  EUR 1,000 = 
</Text>
`;

exports[`Storyshots StatusText default 1`] = `
<Text
  style={
    Object {
      "fontSize": 12,
    }
  }
>
  Fetching latest rates...
</Text>
`;

exports[`Storyshots ToText default 1`] = `
<Text
  style={
    Object {
      "color": "rgb(95, 80, 181)",
      "fontSize": 36,
    }
  }
>
  DKK 100,000
</Text>
`;
